Implementacion de la API
Falta GET y POST de las habitaciones, pero el resto debería estar funcionando.